Fix: Addition Mobile Layout 32

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1621,6 +1621,7 @@ body {
         padding: 0;
         width: 100%;
         max-width: 600px;
+        display: none;
     }
     .tab-content {
         display: none; /* Hidden by default */
